    mcMMO will not remove old backups unless at least 10 files are present in the backup folder, this doesn't guarantee that mcMMO won't remove old files, just prevents unnecessary operations
    Added some failsafes to prevent mcMMO from saving too often

    Command config options will now be found in "commands.conf"
    Settings related to party chat have been moved to the party config file

    Custom item (Chimaera Wing) config options will now be found in "custom_items.conf"

    Language config options will now be found in "language.conf"

    Creature config settings will now be found in "creatures.conf"

    Particle settings will now be found in "particle_spawning.conf"

    Party config options will now be found in "party.conf"
    Added toggle to completely disable parties
    Party's "MaxSize" renamed -> "Party-Max-Size"
    Party's "AutoKick_Interval" renamed -> "Hours-Between-Cleanup-Operations"
    Party's "Old_Party_Member_Cutoff" renamed -> "Offline-Day-Limit"
    Added toggle to limit max party size, previously this was done by setting party maximum size above -1
    Leveling your Party-Level now requires being near another party member by default
    Leveling your Party now is no longer tied to player xp formula variables and instead uses its own parameters
    Party members are now informed about your skill ups by default
    Party member item sharing is now disabled by default

    Notification config options will now be found in "chat_and_hud_notifications.conf"

    MOTD (Message of the day) config options will now be found in "motd.conf"
    MOTD's "MOTD_Enabled" renamed -> "Show-MOTD-On-Player-Join"

    Anonymous statistic config options will now be found in "analytics_reporting.conf"

    Hardcore config options will now be found in "hardcore.conf"

    Super Ability conifg options will now be found in "skill_super_abilities.conf"
    Super Abilities now have a default max length cap of one minute